# rp2040-TempLogger

./: .gitignore  CMakeLists.txt  CMakePresets.json  Untitled-1.py  copy_to_pico.bat  main.py  target_file_path.txt
Core/: CMakeLists.txt
Core/Inc/: CMakeLists.txt  main.h
Core/Inc/ssd1306/: CMakeLists.txt
Core/Lib/: CMakeLists.txt  moving_average_filter.h
Core/Lib/BCD_Conversion/: BCD_Conversion.c  BCD_Conversion.h  CMakeLists.txt
Core/Lib/DS3231-driver(RTC)/: CMakeLists.txt  Doxyfile  ds3231.c  ds3231.h
Core/Lib/DS3231-driver(RTC)/doxygen/: .config
Core/Lib/DS3231-driver(RTC)/doxygen/html/: annotated.html  annotated_dup.js  classes.html  doxygen_crawl.html  ds3231_8h_source.html  files.html  files_dup.js  index.html  navtreedata.js  navtreeindex0.js  structds3231__time__date.html
Core/Lib/DS3231-driver(RTC)/doxygen/html/search/: classes_0.js
Core/Lib/DS3231-driver(RTC)/doxygen/latex/: annotated.tex  ds3231_8h_source.tex  files.tex  refman.tex  structds3231__time__date.tex
Core/Lib/button/: CMakeLists.txt  button.c  button.h  debounce.c  debounce.h
Core/Lib/font_5x7/: 5x7_Font.h  CMakeLists.txt  font_render_engine.h
Core/Lib/median_filter/: median_filter.h
Core/Lib/sd-card/: CMakeLists.txt
Core/Lib/sd-card/fatfs/: CMakeLists.txt  diskio.c  ffconf.h
Core/Lib/sd-card/physical-api/: CMakeLists.txt  fatfs_sd.c  fatfs_sd.h
Core/Lib/ssd1306/: cmake_install.cmake  ssd1306.c  ssd1306.h
Core/Src/: CMakeLists.txt  button.c  cmake_install.cmake  i2c_scaner.c  main.c  working(rtc).c
Generated_Debug/: Temp_Logger_Debug_0.0.0.elf  Temp_Logger_Debug_0.0.0.elf.map  Temp_Logger_Debug_0.0.0.hex  Temp_Logger_Debug_0.0.0.uf2
test/: ffconf.h  user_diskio.c
